--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -9,7 +9,7 @@
     <nav th:fragment="navBar">
         <ul>
             <li><a href="list.html">List Animals</a></li>
-            <li><a href="login.html">Foster Parents</a></li>
+            <li><a href="login.html">Become Foster Parents</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="list.html">Search</a></li>
         </ul>
