--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -4,14 +4,16 @@
 <!--/*@thymesVar id="role" type="com.theIronYard.entity.Role"*/-->
 
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link th:href="@{css/styles.css}" href="../static/css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<header th:replace="fragments/pageHead :: pageHead">
+<div class="container-fluid">
+<header class="row" th:replace="fragments/pageHead :: pageHead">
     <h1>Foster Story</h1>
 </header>
 
-<nav th:replace="fragments/navBar :: navBar">
+<nav class="row" th:replace="fragments/navBar :: navBar">
     <ul>
         <li><a href="list.html">List Animals</a></li>
         <li><a href="login.html">Foster Parents</a></li>
@@ -20,8 +22,9 @@
     </ul>
 </nav>
 
-<div>
+<div class="row">
     Our story
+</div>
 </div>
 </body>
 </html>
