--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -4,14 +4,16 @@
 <!--/*@thymesVar id="role" type="com.theIronYard.entity.Role"*/-->
 
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link th:href="@{css/styles.css}" href="../static/css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <header th:replace="fragments/pageHead :: pageHead">
+    <div class="container-fluid">
+    <header class="row" th:replace="fragments/pageHead :: pageHead">
         <h1>Foster Story</h1>
     </header>
 
-    <nav th:replace="fragments/navBar :: navBar">
+    <nav class="row" th:replace="fragments/navBar :: navBar">
         <ul>
             <li><a href="list.html">List Animals</a></li>
             <li><a href="login.html">Foster Parents</a></li>
@@ -20,7 +22,7 @@
         </ul>
     </nav>
 
-    <form id="searchForm" role="form" action="list.html" th:action="@{/}" method="post">
+    <form class="row" id="searchForm" role="form" action="list.html" th:action="@{/}" method="post">
 
         <h3>Search for an Animal:</h3>
         <div>
@@ -75,13 +77,14 @@
 
     </form>
 
-    <div id="featureStory">
+    <div class="row" id="featureStory">
         <img />
         <div class="textBody"></div>
     </div>
 
-    <div id="animalTiles">
+    <div class="row" id="animalTiles">
 
+    </div>
     </div>
 </body>
 </html>
