--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,10 +4,11 @@
 
 <head>
     <title>Login</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link th:href="@{css/styles.css}" href="../static/css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-
+<div class="container-fluid">
 <header th:replace="fragments/pageHead :: pageHead">
     <h1>Foster Story</h1>
 </header>
@@ -49,6 +50,6 @@
         <a href="registration.html" th:href="@{registration}">Register a new account</a>
     </div>
 </form>
-
+</div>
 </body>
 </html>
