--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -5,9 +5,11 @@
 <!--/*@thymesVar id="image" type="com.fosterstory.entity.Image"*/-->
 
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link th:href="@{css/styles.css}" href="../static/css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<div class="container-fluid">
 <header th:replace="fragments/pageHead :: pageHead">
     <h1>Foster Story</h1>
 </header>
@@ -140,6 +142,7 @@
             <input type="url" name="tumblr" id="tumblr" />
         </div>
     </form>
+</div>
 </div>
 </body>
 </html>
