--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -4,9 +4,11 @@
 <!--/*@thymesVar id="role" type="com.theIronYard.entity.Role"*/-->
 
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link th:href="@{css/styles.css}" href="../static/css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<div class="container-fluid">
 <header th:replace="fragments/pageHead :: pageHead">
     <h1>Foster Story</h1>
 </header>
@@ -84,6 +86,7 @@
 
 <div id="animalTiles">
 
+</div>
 </div>
 </body>
 </html>
