--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -4,7 +4,10 @@
 <!--/*@thymesVar id="role" type="com.theIronYard.entity.Role"*/-->
 
 <head>
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link th:href="@{css/styles.css}" href="../static/css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
@@ -12,7 +15,8 @@
 <header class="row" th:replace="fragments/pageHead :: pageHead">
     <h1>Foster Story</h1>
 </header>
-
+</div>
+<div class="container">
 <nav class="row" th:replace="fragments/navBar :: navBar">
     <ul>
         <li><a href="list.html">List Animals</a></li>
@@ -26,5 +30,8 @@
     Our story
 </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
