--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -4,15 +4,27 @@
 <!--/*@thymesVar id="role" type="com.theIronYard.entity.Role"*/-->
 
 <head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link th:href="@{css/styles.css}" href="../static/css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
+<div class="container">
 <body>
+    <div class="row">
+
     <nav th:fragment="navBar">
-        <ul>
-            <li><a href="list.html">List Animals</a></li>
-            <li><a href="login.html">Become Foster Parents</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="list.html">Search</a></li>
-        </ul>
+            <div class="col-md-3"> <div class="well"> <a href="list.html">List Animals</a> </div> </div>
+            <div class="col-md-3"> <div class="well"> <a href="login.html">Become Foster Parents</a></div></div>
+            <div class="col-md-3"> <div class="well"> <a href="about.html">About Us</a></div></div>
+            <div class="col-md-3"> <div class="well"> <a href="list.html">Search</a></div></div>
     </nav>
+    </div>
+
+</div>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </body>
 </html>
