Fixed list Animals, and we made a bidirectional relationship between users and animals

--- a/src/main/resources/templates/fragments/pageHead.html
+++ b/src/main/resources/templates/fragments/pageHead.html
@@ -8,7 +8,7 @@
 <body>
 <header th:fragment="pageHead">
     <h1>Foster Story</h1>
-    <div th:replace="userMenu :: userMenu"></div>
+    <div>User menu</div>
 </header>
 </body>
 </html>
