--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -5,9 +5,9 @@
 
 <head>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
 </head>
 <body>
 <div class="container-fluid">
@@ -17,12 +17,12 @@
 </div>
 <div class="container">
 <nav class="row" th:replace="fragments/navBar :: navBar">
-    <ul>
-        <li><a href="list.html">List Animals</a></li>
-        <li><a href="login.html">Foster Parents</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="list.html">Search</a></li>
-    </ul>
+    <div class="row">
+        <div class="col-md-3"> <div class="well"> <a href="list.html">List Animals</a> </div> </div>
+        <div class="col-md-3"> <div class="well"> <a href="login.html">Become Foster Parents</a></div></div>
+        <div class="col-md-3"> <div class="well"> <a href="about.html">About Us</a></div></div>
+        <div class="col-md-3"> <div class="well"> <a href="list.html">Search</a></div></div>
+    </div>
 </nav>
 
 <div class="row">
