--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -2,13 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <!--/*@thymesVar id="user" type="com.theIronYard.entity.User"*/-->
 <!--/*@thymesVar id="role" type="com.theIronYard.entity.Role"*/-->
+<!--/*@thymesVar id="breed" type="com.theIronYard.entity.Breed"*/-->
+<!--/*@thymesVar id="type" type="com.theIronYard.entity.Type"*/-->
+<!--/*@thymesVar id="breeds" type="java.util.List<Type>"*/-->
+<!--/*@thymesVar id="types" type="java.util.List<Breed>"*/-->
+<!--/*@thymesVar id="search" type="com.theIronYard.bean.Search"*/-->
+<!--/*@thymesVar id="animal" type="com.theIronYard.entity.Animal"*/-->
+<!--/*@thymesVar id="animals" type="java.util.List<Animal>"*/-->
 
 <head>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <link th:href="@{css/styles.css}" href="../static/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
 </head>
 <body>
     <div class="container-fluid">
@@ -17,12 +23,12 @@
     </header>
 
     <nav class="row" th:replace="fragments/navBar :: navBar">
-        <ul>
-            <li><a href="list.html">List Animals</a></li>
-            <li><a href="login.html">Foster Parents</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="list.html">Search</a></li>
-        </ul>
+        <div class="row">
+            <div class="col-md-3"> <div class="well"> <a href="list.html">List Animals</a> </div> </div>
+            <div class="col-md-3"> <div class="well"> <a href="login.html">Become Foster Parents</a></div></div>
+            <div class="col-md-3"> <div class="well"> <a href="about.html">About Us</a></div></div>
+            <div class="col-md-3"> <div class="well"> <a href="list.html">Search</a></div></div>
+        </div>
     </nav>
 
     <form class="row" id="searchForm" role="form" action="list.html" th:action="@{/}" method="post">
@@ -72,7 +78,7 @@
             <label for="animalId">
                 <strong>Animal ID:</strong>
             </label>
-            <input type="text" name="animalId" id="animalId" placeholder="ID" th:text="${search.animalId}"/>
+            <input type="text" name="animalId" id="animalId" placeholder="ID" th:text="${search.id}"/>
         </div>
 
         <button type="submit" id="search" name="action" value="search">Search</button>
@@ -86,7 +92,12 @@
     </div>
 
     <div class="row" id="animalTiles">
-
+        <div class="col-md-4 animal-tile" th:each="animal : ${animals}">
+            <a href="details.html" th:href="@{....}"><img src="../static/images/" th:src="@{images/}" />
+                <div th:text="${animal.name}" class="animal-name">name</div>
+                <div th:text="${animal.getUser().getAddress().getCity()}" class="animal-city">city, ST</div>
+            </a>
+        </div>
     </div>
     </div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
