add sql file for mock databse list page working

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -26,7 +26,17 @@
 </nav>
 
 <div class="row">
-    Our story
+    <h2>Our story</h2>
+
+    <div>
+        For the thousands of rescue animal foster parents currently caring for a rescued pet there is no central online resource that assists the adoption transition process. After having gone through the experience personally, I identified this as a major gap in the animal adoption sector that we are now addressing with Fosterstory.com.
+
+        Many rescue animal foster parents are required carry the full burden of care, and also expected to take on the adoption marketing responsibilities.
+
+        The purpose of Fosterstory.com is to ultimately connect prospective “Forever Families” to the inspiring and heart warming stories of rescuing and caring for these animals.
+
+        Fostrestory will leverage existing social media infrastructure to allow for the simple creation, presentation, and marketing of these amazing rescue stories.
+    </div>
 </div>
 </div>
 
