--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -154,6 +154,8 @@
             </label>
             <input type="url" name="tumblr" id="tumblr" />
         </div>
+
+        <button>Submit</button>
     </form>
 </div>
 </div>
