--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,7 +49,7 @@
          <button>Login!</button>
     </div>
     <div>
-        <a href="registration.html" th:href="@{registration}">Register a new account</a>
+        <a href="register.html" th:href="@{/register}">Register a new account</a>
     </div>
 </form>
 </div>
