--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -15,10 +15,10 @@
 <div class="container">
     <nav th:fragment="navBar">
         <div class="row">
-            <div class="col-md-3"> <div class="well"> <a th:href="@{/}" href="list.html">List Animals</a> </div> </div>
-            <div class="col-md-3"> <div class="well"> <a th:href="@{/register}" href="login.html">Become Foster Parents</a></div></div>
-            <div class="col-md-3"> <div class="well"> <a th:href="@{/about}" href="about.html">About Us</a></div></div>
-            <div class="col-md-3"> <div class="well"> <a th:href="@{/}" href="list.html">Search</a></div></div>
+            <div class="col-md-3"> <div class="well"> <a th:href="@{/}" href="../list.html">List Animals</a> </div> </div>
+            <div class="col-md-3"> <div class="well"> <a th:href="@{/register}" href="../register.html">Become Foster Parents</a></div></div>
+            <div class="col-md-3"> <div class="well"> <a th:href="@{/about}" href="../about.html">About Us</a></div></div>
+            <div class="col-md-3"> <div class="well"> <a th:href="@{/}" href="../list.html">Search</a></div></div>
         </div>
     </nav>
 
