Our Login/security code

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -67,8 +67,8 @@
                 <label for="street1">
                     Street:
                 </label>
-                <input type="text" name="street1" id="street1">
-                <input type="text" name="street2" id="street2">
+                <input type="text" name="street1" id="street1" />
+                <input type="text" name="street2" id="street2" />
 
                 <label for="city">
                     City:
@@ -133,10 +133,10 @@
                     <option value="WY">Wyoming</option>
                 </select>
 
-                <label for="zipcode">
+                <label for="zip-code">
                     ZIP Code:
                 </label>
-                <input type="text" name="zipcode" id="zipcode" />
+                <input type="text" name="zip-code" id="zip-code" />
             </div>
             <label for="user-image">
                 Profile Image:
