--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
             Email:
         </label>
         <input type="email" name="email" id="email" value="" th:value="*{email}" />
-        <!--<ul class="error"><li th:each="err : ${#fields.errors('email')}" >Error!</li></ul>-->
+        <ul class="error"><li th:each="err : ${#fields.errors('email')}" >Error!</li></ul>
     </div>
 
     <div>
@@ -43,7 +43,7 @@
             Password:
         </label>
         <input type="password" name="password" id="password" value="" />
-        <!--<ul class="error"><li th:each="err : ${#fields.errors('password')}" >Error!</li></ul>-->
+        <ul class="error"><li th:each="err : ${#fields.errors('password')}" >Error!</li></ul>
     </div>
     <div>
          <button>Login!</button>
