--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -70,6 +70,11 @@
             <div id="calendar">
 
             </div>
+
+            <label for="tumblr">
+                <img src="../static/images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png" alt="Tumblr logo">
+            </label>
+            <input type="url" name="tumblr" id="tumblr" />
         </div>
 
         <div class="rightColumn">
