home brew security and add user working

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -36,7 +36,7 @@
     <div class="row">
         <h2 th:text="${user.id} == null ? 'Register for a new Account' : 'Change password'">Register for a new Account</h2>
 
-        <form name="user-form" id="user-form" action="register.html" th:action="@{/register}" method="post">
+        <form name="user-form" id="user-form" action="register.html" th:action="@{/register}" th:object="${user}" method="post">
             <label for="username">Email:</label>
             <input type="text" name="username" id="username" />
 
@@ -45,24 +45,24 @@
                     Old Password:
                 </label>
                 <input type="password" name="old-password" id="old-password" />
-                <ul class="error"><li th:each="err : ${#fields.errors('badpassword')}" th:text="${err}"></li></ul>
+                <ul class="error"><li th:each="err : ${#fields.errors('oldPassword')}" th:text="${err}"></li></ul>
             </div>
             <div>
                 <label for="password">
                     New Password:
                 </label>
                 <input type="password" name="password" id="password" />
-                <ul class="error"><li th:each="err : ${#fields.errors('password-old-new')}" th:text="${err}"></li></ul>
+                <ul class="error"><li th:each="err : ${#fields.errors('password')}" th:text="${err}"></li></ul>
             </div>
             <div>
                 <label for="confirmPassword" >
                     Confirm Password:
                 </label>
                 <input type="password" name="confirmPassword" id="confirmPassword" />
-                <ul class="error"><li th:each="err : ${#fields.errors('password-match')}" th:text="${err}"></li></ul>
+                <ul class="error"><li th:each="err : ${#fields.errors('confirmPassword')}" th:text="${err}"></li></ul>
             </div>
 
-            <button type="button" id="submit" name="submit">Submit</button>
+            <button>Submit</button>
         </form>
 
     </div>
