Updated with bootstrap navbar, minor styling edits,  added more controller methods, modified phone property, user fully persisting to database

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,245 +1,90 @@
-* {
-    background-color: bisque;
-    font-family: sans-serif;
-    /*border: 2px dashed black;*/
+.navbar-inverse {
+    background-color: #425370
 }
 
-header{
+.navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    background-color: #FFF7E3
 }
 
-a.nounderline{
-    font-family: Futura, Tahoma, sans-serif;
-    text-decoration: none;
-    text-align: center;
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+    background-color: #FFF7E3
 }
 
-ul{
-    list-style-type: none;
-    /*position: absolute;*/
-    margin: -10px;
-
+.dropdown-menu {
+    background-color: #FFF7E3
 }
 
-nav {
-    margin: 0.5em;
-    display: block;
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+    background-color: #425370
 }
 
-nav li {
-    display: inline;
-    padding: 5px;
-    border: 2px solid #000000;
-    font-family: Futura, Tahoma, sans-serif;
-    color: #ffffff;
-    border-radius: 5px 5px;
-    background-color: #cc0323;
-}
-
-p {
-    padding: 5px;
-}
-
-nav a {
-    font-family: Futura, Tahoma, sans-serif;
-    color: #ffffff;
-    text-decoration: none;
-    background-color: #cc0323;
-}
-
-.pagination a {
-    font-family: Futura, Tahoma, sans-serif;
-    color: #ffffff;
-    text-decoration: none;
-    background-color: #cc0323;
-}
-
-label {
-    display: inline-block;
-    width: 100px;
-    margin: 0.25em;
-}
-
-label input {
-    margin-top: -10px;
-}
-
-button {
-    display: inline;
-    padding: 5px;
-    border: 2px solid #000000;
-    font-family: Futura, Tahoma, sans-serif;
-    font-size: medium;
-    color: #ffffff;
-    border-radius: 5px 5px;
-    background-color: #cc0323;
-}
-
-h1 {
-    background-color: plum;
-    height: 150px;
-    text-align: center;
-}
-
-h2, h3, h4 {
-    font-family: "Avenir Next", "sans-serif";
-    color: #cc0323;
-    clear: both;
-}
-
-.required {
-    color: red;
-}
-
-textarea {
-    width: 60em;
-    height: 5em;
-}
-
-#searchForm {
-    clear: both;
-    display: block;
-    margin-bottom: 1em;
-}
-
-#searchForm div {
-    display: inline-block;
-}
-
-#searchForm div label {
-    display: block;
-}
-
-#searchForm input[type="text"] {
-    width: 200px;
-    margin-right: 2em;
-}
-
-.pagination {
-    display: block;
-}
-
-#addAnimalForm {
-    display: inline-block;
-    float: left;
-}
-
-#addAnimalForm input[type="text"] {
-    width: 200px;
-    margin-right: 2em;
-}
-
-#passwordForm input, label{
-    width: 250px;
-}
-
-form div{
-    padding: .5em;
-    width: 200px;
-}
-
-#mainImage {
-    clear: right;
-    float: left;
-    display: inline-block;
-    width: 200px;
-}
-
-.buttonbar {
-    margin: 2em;
-
-}
-
-.noteLabel{
-    display: block;
-    width: 100%
-}
-
-#notes-block {
-    display: block;
-    clear: both;
-}
-
-.animal{
-    display: block;
-    border: 1px solid black;
-    clear: both;
-    margin: 1em 0 1em 0;
-    padding: 1em;
-}
-
-.animal img{
-    width: 100px;
-    display: inline-block;
-    float: left;
-    margin-right: 1em;
-    vertical-align: top;
-}
-
-.delete-btn{
-    width: 20px;
-
-    display: inline;
-    padding: 0px;
-    border: 0px;
-    font-family: Futura, Tahoma, sans-serif;
-    font-size: medium;
-    color: #ffffff;
-    border-radius: 5px 5px;
-    background-color: bisque;
-}
-
-ul.error{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-ul.error li{
-    color: darkred;
-    margin: 0.25em 0;
-    padding: 0.25em 0;
-    font-size: small;
-}
-
-input.error, select.error{
-    -webkit-box-shadow: 0 0 15px 0 rgba(255,0,0,0.5);
-    -moz-box-shadow: 0 0 15px 0 rgba(255,0,0,0.5);
-    box-shadow: 0 0 15px 0 rgba(255,0,0,0.5);
-}
-
-input, select{
-    margin: 0.25em 0;
-}
-
-.error{
-    color:red;
-    font-size: x-small;
-    margin-left:90px;
-    list-style: disc;
+.navbar-inverse {
     background-image: none;
 }
 
-.leftColumn {
-    display: inline;
-    float: left;
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+    background-image: none;
 }
 
-.leftColumn label {
-    display: inline;
+.navbar-inverse {
+    border-color: #5F7269
 }
 
-.leftColumn input {
-    display: inline;
+.navbar-inverse .navbar-brand {
+    color: #BDB395;
+    /*height: 75px;*/
 }
 
-.rightColumn {
-    display: inline;
+.navbar-brand img {
+    height: 50px;
+    padding-right: 2em;
 }
 
-#animalTiles {
-    overflow-x: auto;
+.navbar-inverse .navbar-brand:hover {
+    color: #5F7269
 }
 
-#tumblr-logo {
-    width: 75px;
+.navbar-inverse .navbar-nav > li > a {
+    color: #FFF7E3
+}
+
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    color: #5F7269
+}
+
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+    color: #5F7269ΩΩΩ
+}
+
+.navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+    color: #5F7269
+}
+
+.dropdown-menu > li > a {
+    color: #5F7269
+}
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+    color: #FFF7E3
+}
+
+
+.navbar-inverse .navbar-nav > .dropdown > a:hover .caret {
+    border-top-color: #FFF7E3
+}
+
+.navbar-inverse .navbar-nav > .dropdown > a .caret {
+    border-top-color: #FFF7E3
+}
+
+.navbar-inverse .navbar-nav > .dropdown > a:hover .caret {
+    border-bottom-color: #FFF7E3
+}
+
+.main-body {
+    padding-top: 50px;
+}
+
+.tumblr-logo {
+    width: 60px;
 }
