--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -8,37 +8,34 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{css/styles.css}" />
 </head>
 <body>
-<div class="container-fluid">
-<header class="row" th:replace="fragments/pageHead :: pageHead">
-    <h1>Foster Story</h1>
-</header>
-</div>
-<div class="container">
-<nav class="row" th:replace="fragments/navBar :: navBar">
-    <div class="row">
-        <div class="col-md-3"> <div class="well"> <a href="list.html">List Animals</a> </div> </div>
-        <div class="col-md-3"> <div class="well"> <a href="login.html">Become Foster Parents</a></div></div>
-        <div class="col-md-3"> <div class="well"> <a href="about.html">About Us</a></div></div>
-        <div class="col-md-3"> <div class="well"> <a href="list.html">Search</a></div></div>
+    <div class="container">
+    <nav th:replace="fragments/pageHead :: pageHead">
+        <div class="row">
+            <div class="col-md-3"> <div class="well"> <a href="list.html">List Animals</a> </div> </div>
+            <div class="col-md-3"> <div class="well"> <a href="login.html">Become Foster Parents</a></div></div>
+            <div class="col-md-3"> <div class="well"> <a href="about.html">About Us</a></div></div>
+            <div class="col-md-3"> <div class="well"> <a href="list.html">Search</a></div></div>
+        </div>
+    </nav>
     </div>
-</nav>
+    <div class="container main-body">
+        <div class="row">
+            <h2>Our story</h2>
 
-<div class="row">
-    <h2>Our story</h2>
+            <div>
+                For the thousands of rescue animal foster parents currently caring for a rescued pet there is no central online resource that assists the adoption transition process. After having gone through the experience personally, I identified this as a major gap in the animal adoption sector that we are now addressing with Fosterstory.com.
 
-    <div>
-        For the thousands of rescue animal foster parents currently caring for a rescued pet there is no central online resource that assists the adoption transition process. After having gone through the experience personally, I identified this as a major gap in the animal adoption sector that we are now addressing with Fosterstory.com.
+                Many rescue animal foster parents are required carry the full burden of care, and also expected to take on the adoption marketing responsibilities.
 
-        Many rescue animal foster parents are required carry the full burden of care, and also expected to take on the adoption marketing responsibilities.
+                The purpose of Fosterstory.com is to ultimately connect prospective “Forever Families” to the inspiring and heart warming stories of rescuing and caring for these animals.
 
-        The purpose of Fosterstory.com is to ultimately connect prospective “Forever Families” to the inspiring and heart warming stories of rescuing and caring for these animals.
-
-        Fostrestory will leverage existing social media infrastructure to allow for the simple creation, presentation, and marketing of these amazing rescue stories.
+                Fostrestory will leverage existing social media infrastructure to allow for the simple creation, presentation, and marketing of these amazing rescue stories.
+            </div>
+        </div>
     </div>
-</div>
-</div>
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
