--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -15,21 +15,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{css/styles.css}" />
 </head>
 <body>
-    <div class="container-fluid">
     <header class="row" th:replace="fragments/pageHead :: pageHead">
         <h1>Foster Story</h1>
     </header>
-
-    <nav class="row" th:replace="fragments/navBar :: navBar">
-        <div class="row">
-            <div class="col-md-3"> <div class="well"> <a href="list.html">List Animals</a> </div> </div>
-            <div class="col-md-3"> <div class="well"> <a href="login.html">Become Foster Parents</a></div></div>
-            <div class="col-md-3"> <div class="well"> <a href="about.html">About Us</a></div></div>
-            <div class="col-md-3"> <div class="well"> <a href="list.html">Search</a></div></div>
-        </div>
-    </nav>
+    <div class="container-fluid main-body">
 
     <form class="row" id="searchForm" role="form" action="list.html" th:action="@{/}" method="post">
 
