--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,14 +8,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{css/styles.css}" />
 </head>
 <body>
-<div class="container-fluid">
-<header th:replace="fragments/pageHead :: pageHead">
-    <h1>Foster Story</h1>
-</header>
 
-<nav th:replace="fragments/navBar :: navBar">
+<nav th:replace="fragments/pageHead :: pageHead">
     <ul>
         <li><a href="list.html">List Animals</a></li>
         <li><a href="login.html">Foster Parents</a></li>
@@ -24,6 +21,7 @@
     </ul>
 </nav>
 
+<div class="container-fluid main-body">
 
 <h2>Login</h2>
 
