--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -9,14 +9,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{css/styles.css}" />
 </head>
 <body>
-<div class="container-fluid">
-<header th:replace="fragments/pageHead :: pageHead">
-    <h1>Foster Story</h1>
-</header>
 
-<nav th:replace="fragments/navBar :: navBar">
+<nav th:replace="fragments/pageHead :: pageHead">
     <div class="row">
         <div class="col-md-3"> <div class="well"> <a href="list.html">List Animals</a> </div> </div>
         <div class="col-md-3"> <div class="well"> <a href="login.html">Become Foster Parents</a></div></div>
@@ -25,40 +22,42 @@
     </div>
 </nav>
 
+<div class="container-fluid main-body">
+
 <div id="fosterParentDetails">
-    <form id="editProfile" role="form" action="profile.html" th:action="@{/editProfile}" method="post" th:object="${user}">
+    <form id="editProfile" role="form" action="profile.html" th:action="@{/profile}" method="post" th:object="${user}">
         <div id="leftColumn">
             <h2>Foster Parent Details</h2>
 
             <label for="email">
                 Email:
             </label>
-            <input type="email" name="email" id="email" />
+            <input type="email" name="email" id="email" th:value="*{email}" />
 
             <label for="nickName">
             Nick Name:
             </label>
-            <input type="nickName" name="nickName" id="nickName" />
+            <input type="nickName" name="nickName" id="nickName" th:value="*{nickName}"/>
 
             <label for="firstName">
                 First name:
             </label>
-            <input type="text" name="firstName" id="firstName" />
+            <input type="text" name="firstName" id="firstName" th:value="*{firstName}" />
 
             <label for="middleName">
-                First name:
+                Middle name:
             </label>
-            <input type="text" name="middleName" id="middleName" />
+            <input type="text" name="middleName" id="middleName" th:value="*{middleName}"/>
 
             <label for="lastName">
-                First name:
+                Last name:
             </label>
-            <input type="text" name="lastName" id="lastName" />
+            <input type="text" name="lastName" id="lastName" th:value="*{lastName}" />
 
             <label for="phone">
                 Phone:
             </label>
-            <input type="text" name="phone" id="phone" />
+            <input type="text" name="phone" id="phone" th:value="*{phone}"/>
 
             <label for="address">
                 Address
@@ -67,76 +66,76 @@
                 <label for="street1">
                     Street:
                 </label>
-                <input type="text" name="street1" id="street1" />
-                <input type="text" name="street2" id="street2" />
+                <input type="text" name="street1" id="street1" th:value="*{address.street1}"/>
+                <input type="text" name="street2" id="street2" th:value="*{address.street2}"/>
 
                 <label for="city">
                     City:
                 </label>
-                <input type="text" name="city" id="city" />
+                <input type="text" name="city" id="city" th:value="*{address.city}"/>
 
                 <label for="state">
                     State:
                 </label>
                 <select name="state" id="state">
                     <option value="">select...</option>
-                    <option value="AL">Alabama</option>
-                    <option value="AK">Alaska</option>
-                    <option value="AZ">Arizona</option>
-                    <option value="AR">Arkansas</option>
-                    <option value="CA">California</option>
-                    <option value="CO">Colorado</option>
-                    <option value="CT">Connecticut</option>
-                    <option value="DE">Delaware</option>
-                    <option value="DC">District of Columbia</option>
-                    <option value="FL">Florida</option>
-                    <option value="GA">Georgia</option>
-                    <option value="HI">Hawaii</option>
-                    <option value="ID">Idaho</option>
-                    <option value="IL">Illinois</option>
-                    <option value="IN">Indiana</option>
-                    <option value="IA">Iowa</option>
-                    <option value="KS">Kansas</option>
-                    <option value="KY">Kentucky</option>
-                    <option value="LA">Louisiana</option>
-                    <option value="ME">Maine</option>
-                    <option value="MD">Maryland</option>
-                    <option value="MA">Massachusetts</option>
-                    <option value="MI">Michigan</option>
-                    <option value="MN">Minnesota</option>
-                    <option value="MS">Mississippi</option>
-                    <option value="MO">Missouri</option>
-                    <option value="MT">Montana</option>
-                    <option value="NE">Nebraska</option>
-                    <option value="NV">Nevada</option>
-                    <option value="NH">New Hampshire</option>
-                    <option value="NJ">New Jersey</option>
-                    <option value="NM">New Mexico</option>
-                    <option value="NY">New York</option>
-                    <option value="NC">North Carolina</option>
-                    <option value="ND">North Dakota</option>
-                    <option value="OH">Ohio</option>
-                    <option value="OK">Oklahoma</option>
-                    <option value="OR">Oregon</option>
-                    <option value="PA">Pennsylvania</option>
-                    <option value="RI">Rhode Island</option>
-                    <option value="SC">South Carolina</option>
-                    <option value="SD">South Dakota</option>
-                    <option value="TN">Tennessee</option>
-                    <option value="TX">Texas</option>
-                    <option value="UT">Utah</option>
-                    <option value="VT">Vermont</option>
-                    <option value="VA">Virginia</option>
-                    <option value="WA">Washington</option>
-                    <option value="WV">West Virginia</option>
-                    <option value="WI">Wisconsin</option>
-                    <option value="WY">Wyoming</option>
+                    <option value="AL" th:selected="*{address.state == 'AL'}">Alabama</option>
+                    <option value="AK" th:selected="*{address.state == 'AK'}">Alaska</option>
+                    <option value="AZ" th:selected="*{address.state == 'AZ'}">Arizona</option>
+                    <option value="AR" th:selected="*{address.state == 'AR'}">Arkansas</option>
+                    <option value="CA" th:selected="*{address.state == 'CA'}">California</option>
+                    <option value="CO" th:selected="*{address.state == 'CO'}">Colorado</option>
+                    <option value="CT" th:selected="*{address.state == 'CT'}">Connecticut</option>
+                    <option value="DE" th:selected="*{address.state == 'DE'}">Delaware</option>
+                    <option value="DC" th:selected="*{address.state == 'DC'}">District of Columbia</option>
+                    <option value="FL" th:selected="*{address.state == 'FL'}">Florida</option>
+                    <option value="GA" th:selected="*{address.state == 'GA'}">Georgia</option>
+                    <option value="HI" th:selected="*{address.state == 'HI'}">Hawaii</option>
+                    <option value="ID" th:selected="*{address.state == 'ID'}">Idaho</option>
+                    <option value="IL" th:selected="*{address.state == 'IL'}">Illinois</option>
+                    <option value="IN" th:selected="*{address.state == 'IN'}">Indiana</option>
+                    <option value="IA" th:selected="*{address.state == 'IA'}">Iowa</option>
+                    <option value="KS" th:selected="*{address.state == 'KS'}">Kansas</option>
+                    <option value="KY" th:selected="*{address.state == 'KY'}">Kentucky</option>
+                    <option value="LA" th:selected="*{address.state == 'LA'}">Louisiana</option>
+                    <option value="ME" th:selected="*{address.state == 'ME'}">Maine</option>
+                    <option value="MD" th:selected="*{address.state == 'MD'}">Maryland</option>
+                    <option value="MA" th:selected="*{address.state == 'MA'}">Massachusetts</option>
+                    <option value="MI" th:selected="*{address.state == 'MI'}">Michigan</option>
+                    <option value="MN" th:selected="*{address.state == 'MN'}">Minnesota</option>
+                    <option value="MS" th:selected="*{address.state == 'MS'}">Mississippi</option>
+                    <option value="MO" th:selected="*{address.state == 'MO'}">Missouri</option>
+                    <option value="MT" th:selected="*{address.state == 'MT'}">Montana</option>
+                    <option value="NE" th:selected="*{address.state == 'NE'}">Nebraska</option>
+                    <option value="NV" th:selected="*{address.state == 'NV'}">Nevada</option>
+                    <option value="NH" th:selected="*{address.state == 'NH'}">New Hampshire</option>
+                    <option value="NJ" th:selected="*{address.state == 'NJ'}">New Jersey</option>
+                    <option value="NM" th:selected="*{address.state == 'NM'}">New Mexico</option>
+                    <option value="NY" th:selected="*{address.state == 'NY'}">New York</option>
+                    <option value="NC" th:selected="*{address.state == 'NC'}">North Carolina</option>
+                    <option value="ND" th:selected="*{address.state == 'ND'}">North Dakota</option>
+                    <option value="OH" th:selected="*{address.state == 'OH'}">Ohio</option>
+                    <option value="OK" th:selected="*{address.state == 'OK'}">Oklahoma</option>
+                    <option value="OR" th:selected="*{address.state == 'OR'}">Oregon</option>
+                    <option value="PA" th:selected="*{address.state == 'PA'}">Pennsylvania</option>
+                    <option value="RI" th:selected="*{address.state == 'RI'}">Rhode Island</option>
+                    <option value="SC" th:selected="*{address.state == 'SC'}">South Carolina</option>
+                    <option value="SD" th:selected="*{address.state == 'SD'}">South Dakota</option>
+                    <option value="TN" th:selected="*{address.state == 'TN'}">Tennessee</option>
+                    <option value="TX" th:selected="*{address.state == 'TX'}">Texas</option>
+                    <option value="UT" th:selected="*{address.state == 'UT'}">Utah</option>
+                    <option value="VT" th:selected="*{address.state == 'VT'}">Vermont</option>
+                    <option value="VA" th:selected="*{address.state == 'VA'}">Virginia</option>
+                    <option value="WA" th:selected="*{address.state == 'WA'}">Washington</option>
+                    <option value="WV" th:selected="*{address.state == 'WV'}">West Virginia</option>
+                    <option value="WI" th:selected="*{address.state == 'WI'}">Wisconsin</option>
+                    <option value="WY" th:selected="*{address.state == 'WY'}">Wyoming</option>
                 </select>
 
                 <label for="zip-code">
                     ZIP Code:
                 </label>
-                <input type="text" name="zip-code" id="zip-code" />
+                <input type="text" name="zip-code" id="zip-code" th:value="*{address.zip}"/>
             </div>
             <label for="user-image">
                 Profile Image:
@@ -148,11 +147,11 @@
         <div id="rightColumn">
             <h2>Social Media Links</h2>
 
-            <label for="tumblr">
+            <label class="tumblr-logo" for="tumblr">
                 <img src="../static/images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png" id="tumblr-logo"
                      th:src="@{images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png}"/>
             </label>
-            <input type="url" name="tumblr" id="tumblr" />
+            <input type="url" name="tumblr" id="tumblr" th:value="*{tumblr}"/>
         </div>
 
         <button>Submit</button>
