--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,16 +15,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{css/styles.css}" />
 
     <title>Register a new account</title>
 </head>
 <body>
-<div class="container-fluid">
-    <header class="row" th:replace="fragments/pageHead :: pageHead">
-        <h1>Foster Story</h1>
-    </header>
-
-    <nav class="row" th:replace="fragments/navBar :: navBar">
+    <nav th:replace="fragments/pageHead :: pageHead">
         <div class="row">
             <div class="col-md-3"> <div class="well"> <a href="list.html">List Animals</a> </div> </div>
             <div class="col-md-3"> <div class="well"> <a href="login.html">Become Foster Parents</a></div></div>
@@ -33,12 +29,13 @@
         </div>
     </nav>
 
+<div class="container-fluid main-body">
     <div class="row">
         <h2 th:text="${user.id} == null ? 'Register for a new Account' : 'Change password'">Register for a new Account</h2>
 
         <form name="user-form" id="user-form" action="register.html" th:action="@{/register}" th:object="${user}" method="post">
-            <label for="username">Email:</label>
-            <input type="text" name="username" id="username" />
+            <label for="email">Email:</label>
+            <input type="text" name="email" id="email" />
 
             <div th:if="${user.id} != null">
                 <label for="old-password">
