add multiple animals to story page

--- a/src/main/resources/templates/fragments/pageHead.html
+++ b/src/main/resources/templates/fragments/pageHead.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--/*@thymesVar id="user" type="com.theIronYard.entity.User"*/-->
-<!--/*@thymesVar id="role" type="com.theIronYard.entity.Role"*/-->
+<!--/*@thymesVar id="user" type="com.fosterstory.entity.User"*/-->
+<!--/*@thymesVar id="role" type="com.fosterstory.entity.Role"*/-->
 
 <head>
     <link rel="stylesheet" href="../../static/css/styles.css" th:href="@{/css/styles.css}" />
