--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--/*@thymesVar id="user" type="com.theIronYard.entity.User"*/-->
-<!--/*@thymesVar id="role" type="com.theIronYard.entity.Role"*/-->
-<!--/*@thymesVar id="breed" type="com.theIronYard.entity.Breed"*/-->
-<!--/*@thymesVar id="type" type="com.theIronYard.entity.Type"*/-->
+<!--/*@thymesVar id="user" type="com.fosterstory.entity.User"*/-->
+<!--/*@thymesVar id="role" type="com.fosterstory.entity.Role"*/-->
+<!--/*@thymesVar id="breed" type="com.fosterstory.entity.Breed"*/-->
+<!--/*@thymesVar id="type" type="com.fosterstory.entity.Type"*/-->
 <!--/*@thymesVar id="breeds" type="java.util.List<Type>"*/-->
 <!--/*@thymesVar id="types" type="java.util.List<Breed>"*/-->
-<!--/*@thymesVar id="search" type="com.theIronYard.bean.Search"*/-->
-<!--/*@thymesVar id="animal" type="com.theIronYard.entity.Animal"*/-->
+<!--/*@thymesVar id="search" type="com.fosterstory.bean.Search"*/-->
+<!--/*@thymesVar id="animal" type="com.fosterstory.entity.Animal"*/-->
 <!--/*@thymesVar id="animals" type="java.util.List<Animal>"*/-->
 
 <head>
