--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,3 +1,4 @@
+
 .navbar-inverse {
     background-color: #425370
 }
@@ -38,6 +39,9 @@
 .navbar-brand img {
     height: 50px;
     padding-right: 2em;
+}
+.navbar-brand {
+    padding: 0px 15px;
 }
 
 .navbar-inverse .navbar-brand:hover {
@@ -87,4 +91,18 @@
 
 .tumblr-logo {
     width: 60px;
+}
+
+body {
+    background-color: #FFF7E3;
+    font-family: 'Lalezar', cursive;
+    font-size: 16px;
+}
+
+#searchForm {
+    margin-top: 10px;
+    padding-top: 0px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
