--- a/src/main/resources/templates/fragments/pageHead.html
+++ b/src/main/resources/templates/fragments/pageHead.html
@@ -5,7 +5,7 @@
 
 <head>
     <link rel="stylesheet" href="../../static/css/styles.css" th:href="@{/css/styles.css}" />
-
+    <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet" />
 </head>
 <body>
 
